@@ -43,3 +43,4 @@ several additions:
 - There can be local links in [link #anchor] format in verbatim code, but they
   are retained only in HTML and PDF output.
 - The empty/nonempty line between para/list and para/verb is taken into account.
+- Two or more spaces at end of line denote a line break.
