@@ -9,8 +9,8 @@
 % Remove local links in TXT target.
 %!preproc(txt): '\[([^]#]*) (#[^]]*)]' '\1'
 
-% Remove spaces at end of lines
-%!postproc: '\s*$' ''
+% Remove empty lines
+%!postproc: '^\s*$' ''
 
 % Handle ' -- '
 %!postproc(html): ' -- ' ' &ndash; '
